# vector-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GAP_ANALYSIS.md  README.md  RISK_REGISTER.md  WINDOWS_GUIDE.md  colab.ipynb  docker-entrypoint.sh  flowchart.mmd  start_windows.bat  viz.html
src/: lib.rs  main.rs
src/core/: diagnostics.rs  hardware.rs  hnsw.rs  mod.rs  quantization.rs  runtime.rs
src/simd/: avx2.rs  distance.rs  int8.rs  mod.rs
src/storage/: format.rs  mmap.rs  mod.rs
